# deltav_flow

./: .gitignore  Cargo.toml  README.md  USAGE.md  spacedevs.arrow
docs/: usage.md
docs/plans/: 2026-02-03-deltav-orchestrator-design.md
examples/: flow.rs
frontend/: README.md  index.html
frontend/htmx/: README.md  dashboard.html  index.html  pipeline-details.html  scripts.js  server.py  start.sh  styles.css
nanoservices/core/: Cargo.toml  README.md
nanoservices/core/src/: builder.rs  engine.rs  lib.rs  logging.rs  metrics.rs
nanoservices/core/src/config/: loader.rs  mod.rs  types.rs
nanoservices/core/src/dag/: mod.rs  node.rs  resolver.rs
nanoservices/core/src/destinations/: file.rs  mod.rs  traits.rs
nanoservices/core/src/events/: bus.rs  interval.rs  mod.rs  trigger.rs
nanoservices/core/src/pipeline/: helpers.rs  mod.rs
nanoservices/core/src/scheduler/: mod.rs  runner.rs  state.rs
nanoservices/core/src/sources/: http_client.rs  mod.rs  traits.rs
nanoservices/core/src/store/: db.rs
nanoservices/core/src/tests/: metrics_tests.rs
nanoservices/core/src/transforms/: mod.rs  polars.rs  traits.rs
nanoservices/core/tests/: exporter_integration.rs  scheduler_integration.rs
nanoservices/utils/: Cargo.toml
nanoservices/utils/src/: error.rs  lib.rs
src/: lib.rs
tests/data/stream/: new_stream.json  new_stream1.json
