[package]
name = "deltav-flow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "nanoservices/cli",
    "nanoservices/core",
    "nanoservices/server", 
    "nanoservices/utils",
]

[workspace.dependencies]
async-trait = "0.1.89"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["query", "stream", "blocking"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
polars = { version = "0.49.0", features = ["json"] }
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
url = "2.5.8"
arrow = { version = "55", features = ["ipc"] }
arrow-json = "55"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.35", features = ["bundled"] }
notify = "8"

[dev-dependencies]
pretty_assertions = "1.4.1"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-sdk-s3 = "1.119.0"
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "query", "stream"] }
deltav_core = { path = "nanoservices/core" }
deltav_utils = { path = "nanoservices/utils" }
polars = { workspace = true, features = ["ipc", "ipc_streaming", "json", "lazy"] }
uuid = { version = "1.19.0", features = ["v4"] }
url = "2.5.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
prometheus = "0.14"
hyper = { version = "1.8", features = ["server"] }
once_cell = "1.17"
arrow = { version = "57.2.0", features = ["json"] }
arrow-json = "57.2.0"
datafusion = "52.0.0"
futures.workspace = true
serde_json = "1.0.149"
async-stream = "0.3.6"


