[package]
name = "deltav_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
deltav_utils = { path = "../utils" }
reqwest = { workspace = true, features = ["stream", "blocking"] }
futures-util = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
polars = { workspace = true }
uuid = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
prometheus = "0.14"
hyper = { version = "0.14", features = ["server", "http1"] }
once_cell = "1.17"
