[package]
name = "deltav_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-json.workspace = true
futures-util = { workspace = true }
polars.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror = { workspace = true }
tokio = { workspace = true }
url.workspace = true
arrow = { workspace = true }
arrow-json = { workspace = true }
serde = { workspace = true }
